--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
   },
   "devDependencies": {
     "grunt": "~0.4.5",
-    "grunt-contrib-uglify": "~0.9.1",
     "grunt-contrib-nodeunit": "~0.4.1",
-    "grunt-contrib-jshint": "~0.11.2",
-    "grunt-contrib-clean": "~0.6.0"
+    "grunt-contrib-jshint": "~0.11.2"
+  },
+  "dependencies": {
+    "lodash": "~3.10.0",
+    "pretty-data2": "~0.40.1",
+    "type-name": "~1.0.1"
   }
 }
