--- a/package.json
+++ b/package.json
@@ -1,41 +1,68 @@
 {
   "name": "eukaryote",
   "version": "1.0.0",
-  "description": "Evolutionary algorithm tutorial and library.",
-  "main": "eukaryote.js",
+  "description": "Evolutionary algorithm framework and tutorial.",
+  "main": "src/eukaryote.js",
   "scripts": {
-    "test": "grunt nodeunit"
+    "test": "grunt test"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/coreyferguson/eukaryote"
+    "url": "git+https://github.com/coreyferguson/eukaryote.git"
   },
   "keywords": [
+    "eukaryote",
+    "evolution",
     "evolutionary",
     "algorithm",
     "genetic",
-    "mutation",
+    "evolve",
+    "natural",
+    "selection",
     "replication",
-    "reproduction",
+    "mutation",
+    "mutate",
     "crossover",
-    "fitness"
+    "organism",
+    "species",
+    "individual",
+    "population",
+    "genotype",
+    "phenotype"
   ],
-  "author": "Corey Ferguson",
-  "license": "BSD-2-Clause",
+  "author": "Corey Ferguson <corey.t.ferguson@gmail.com>",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/coreyferguson/eukaryote/issues"
   },
+  "homepage": "https://github.com/coreyferguson/eukaryote#readme",
   "devDependencies": {
-    "grunt": "~0.4.5",
-    "grunt-contrib-nodeunit": "~0.4.1",
-    "grunt-contrib-jshint": "~0.11.2"
-  },
-  "dependencies": {
-    "chalk": "^1.1.0",
-    "lodash": "~3.10.0",
-    "mathjs": "^2.0.1",
-    "pretty-data2": "~0.40.1",
-    "pretty-ms": "^2.0.0",
-    "type-name": "~1.0.1"
+    "grunt": "^0.4.5",
+    "grunt-bump": "^0.6.0",
+    "grunt-cat": "^0.1.2",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-jshint": "^0.11.3",
+    "grunt-contrib-uglify": "^0.10.0",
+    "grunt-karma": "^0.12.1",
+    "grunt-sizediff": "^1.0.3",
+    "grunt-webpack": "^1.0.11",
+    "istanbul-instrumenter-loader": "^0.1.3",
+    "jasmine-core": "^2.3.4",
+    "karma": "^0.13.15",
+    "karma-chrome-launcher": "^0.2.1",
+    "karma-coverage": "^0.5.3",
+    "karma-firefox-launcher": "^0.1.6",
+    "karma-jasmine": "^0.3.6",
+    "karma-phantomjs-launcher": "^0.2.1",
+    "karma-requirejs": "^0.2.2",
+    "karma-webpack": "^1.7.0",
+    "lodash.clone": "^3.0.3",
+    "lodash.shuffle": "^3.1.0",
+    "lodash.sortby": "^3.1.5",
+    "phantomjs": "^1.9.18",
+    "time-grunt": "^1.2.2",
+    "type-name": "^1.1.0",
+    "webpack": "^1.12.3",
+    "webpack-dev-server": "^1.12.1"
   }
 }
