--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "karma-requirejs": "^0.2.2",
     "karma-webpack": "^1.7.0",
     "phantomjs": "^1.9.18",
+    "type-name": "^1.1.0",
     "webpack": "^1.12.3",
     "webpack-dev-server": "^1.12.1"
   }
