--- a/package.json
+++ b/package.json
@@ -39,14 +39,17 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-bump": "^0.6.0",
+    "grunt-cat": "^0.1.2",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-jshint": "^0.11.3",
     "grunt-contrib-uglify": "^0.10.0",
     "grunt-karma": "^0.12.1",
     "grunt-webpack": "^1.0.11",
+    "istanbul-instrumenter-loader": "^0.1.3",
     "jasmine-core": "^2.3.4",
     "karma": "^0.13.15",
     "karma-chrome-launcher": "^0.2.1",
+    "karma-coverage": "^0.5.3",
     "karma-firefox-launcher": "^0.1.6",
     "karma-jasmine": "^0.3.6",
     "karma-phantomjs-launcher": "^0.2.1",
