--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "grunt-contrib-jshint": "^0.11.3",
     "grunt-contrib-uglify": "^0.10.0",
     "grunt-karma": "^0.12.1",
+    "grunt-sizediff": "^1.0.3",
     "grunt-webpack": "^1.0.11",
     "istanbul-instrumenter-loader": "^0.1.3",
     "jasmine-core": "^2.3.4",
